using AgriConnectMarket.Domain.Entities;

namespace AgriConnectMarket.Application.Interfaces
{
    public interface IEventTypeRepository : IRepository<CareEventType>
    {
    }
}
